# kdbplus

./: .gitignore  Cargo.toml
api_examples/src/: lib.rs
kdbplus/: Cargo.toml
kdbplus/src/: lib.rs
kdbplus/src/rusty_api/: mod.rs  native.rs  re_exports.rs  types.rs  utils.rs
kdbplus/src/rusty_api/types/: kdata.rs  kdict.rs  ktable.rs  mod.rs
rusty_api_examples/: Cargo.toml
rusty_api_examples/src/: lib.rs
tests/: bench.q  rusty.q  test-rusty.q  test.q  test_helper_function.q
