[package]
name = "rusty_api_examples"
version = "0.1.0"
edition = "2021"
authors = ["Anthony Rubick"]
publish = false
description = """
NOT A PACKAGE TO PUBLISH.

This module provides examples of using `api` feature of `kdbplus` library. The functions defined in
 the library are used for simple tests.
"""

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
kdbplus = { path = "../kdbplus", features = ["rusty-api"] }
